------------------------------------------------------------------------
r1611 | gaser | 2020-04-30 08:59:48

Changed paths:
M       CHANGES.txt
M       Contents.m
M       cat_surf_resamp_freesurfer.m
M       html/cat.html

Fixed: Resampling for longitudinal Freesurfer data was not finding the correct
folder name.
------------------------------------------------------------------------
r1610 | gaser | 2020-04-29 18:49:12 +0200 (Mi, 29 Apr 2020) | 17 lines

Changed paths:
M       CAT12-Manual.pdf
M       CHANGES.txt
M       cat_conf_stools.m
M       cat_plot_boxplot.m
M       cat_spm_results_ui.m
M       cat_stat_analyze_ROIs.m
M       cat_surf_results.m

(1) Fixed: Solved error with displaying surface ROI results in 
    cat_surf_results.m.
(2) Fixed: Current directory of results was not considered in 
    cat_spm_results_ui.m.
(3) Changed: Updated help text and CAT12 manual (contrasts for 
    longitudinal designs with 2 groups).
(4) Fixed: In rare cases violinplot in cat_plot_boxplot.m failed.

------------------------------------------------------------------------
r1609 | gaser | 2020-04-21 22:38:40 +0200 (Di, 21 Apr 2020) | 11 lines

Changed paths:
M       CHANGES.txt
M       Contents.m
M       cat_run.m
M       cat_spm_results_ui.m
M       html/cat.html

(1) Fixed: Removed dome inconsitencies in cat_spm_results_ui.m where existing
    TFCE results were initially not found. 
(2) Fixed: Corrected incompatibiliy with older SPM12 versions in cat_run.m.

------------------------------------------------------------------------
r1608 | gaser | 2020-04-20 22:25:55 +0200 (Mo, 20 Apr 2020) | 11 lines

Changed paths:
M       CHANGES.txt
M       cat_spm_results_ui.m
M       cat_stat_check_cov.m
M       cat_stat_check_cov2.m

(1) Fixed: Removed bug in cat_spm_results_ui.m where surface results could not
    be displayed.
(2) Changed: Added some more checks for missing or non-valid parameters in
    cat_stat_check_cov*.m
